# consistent_hash_3

hashring/: PKG-INFO  README  setup.cfg
hashring/data/: dev_info-4.json  dev_info-hash-list.json  dev_info-hash-node-dict.json  dev_info.json  log_file.txt  log_file_test.txt
hashring/doc/: 一致性Hash实现说明.docx
hashring/hashring/app/: ringbuilder.py
hashring/hashring/cli/: ringbuilder.py
hashring/hashring/common/: config.py  exceptions.py
hashring/hashring/test/unit/: test_ring.py
hashring/test/: 7-12-test.py
hashring/test/unit/: test_ring.py
