[metadata]
name = hashring
summary = Sangfor hashring
author = Sangfor
classifier =
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
	hashring
scripts =
	bin/ring-builder

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
